[package]
name = "actix-exp"
version = "0.1.0"
authors = ["masanetes <m.yamamoto@accelia.net>"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-cors = "0.2.0"
futures = "0.3.1"
env_logger = "0.7.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = { version = "1.4.0", features = ["mysql", "r2d2"] }
dotenv = "0.9.0"